# Refactor-and-CI

./: README.md
refactor-and-ci/: pyproject.toml
refactor-and-ci/refactor_and_ci/: assignment-lists-solutions.py
refactor-and-ci/tests/: test_doublyLinkedList.py
