[tool.poetry]
name = "refactor-and-ci"
version = "0.1.0"
description = ""
authors = ["jrobin11 <jahidulirobin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
pytest = "^7.4.3"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
